[gd_scene load_steps=14 format=3 uid="uid://d16jqmbm7r4al"]

[ext_resource type="Script" path="res://Scripts/torre_2.gd" id="1_xy26o"]
[ext_resource type="Texture2D" uid="uid://6bqx3wmirl00" path="res://Assets/Pokemon/torres/Squirtle.png" id="2_oecuw"]

[sub_resource type="Animation" id="Animation_scffx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_x2dep"]
resource_name = "ataque"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 0, 1, 4]
}

[sub_resource type="Animation" id="Animation_1dqak"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j78ac"]
_data = {
"RESET": SubResource("Animation_scffx"),
"ataque": SubResource("Animation_x2dep"),
"idle": SubResource("Animation_1dqak")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_4msh7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5qmjj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3olj1"]
bg_color = Color(1, 0, 0, 1)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4d4x6"]
bg_color = Color(0, 0, 0, 0.439216)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 1, 1)
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sdkiy"]
bg_color = Color(0, 0.196078, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 1, 1)
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jiwmn"]
bg_color = Color(0, 1, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1.01075e-06, 0.536013, 5.77569e-07, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t873f"]
bg_color = Color(0.0941176, 0.941176, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0.380392, 1, 1)
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Torre2" type="CharacterBody2D"]
input_pickable = true
script = ExtResource("1_xy26o")

[node name="Aim" type="Marker2D" parent="."]

[node name="Squirtle" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_oecuw")
hframes = 2
vframes = 4
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Squirtle"]
libraries = {
"": SubResource("AnimationLibrary_j78ac")
}

[node name="Tower" type="Area2D" parent="."]
position = Vector2(0, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tower"]
position = Vector2(1.19209e-07, 1)
scale = Vector2(7, 7)
shape = SubResource("CircleShape2D_4msh7")

[node name="BulletContainer" type="Node" parent="."]

[node name="Cadencia" type="Timer" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("CircleShape2D_5qmjj")
one_way_collision_margin = 0.0

[node name="Area" type="Panel" parent="."]
modulate = Color(0, 0, 0, 0.313726)
offset_left = -70.0
offset_top = -61.0
offset_right = 70.0
offset_bottom = 79.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3olj1")

[node name="Upgrade" type="Node" parent="."]

[node name="Upgrade" type="Panel" parent="Upgrade"]
visible = false
texture_filter = 1
offset_left = -65.0
offset_top = 22.0
offset_right = 35.0
offset_bottom = 48.0
scale = Vector2(1.3, 1.3)
theme_override_styles/panel = SubResource("StyleBoxFlat_4d4x6")

[node name="HBoxContainer" type="HBoxContainer" parent="Upgrade/Upgrade"]
layout_mode = 0
offset_left = 4.0
offset_top = 2.0
offset_right = 96.0
offset_bottom = 20.0
theme_override_constants/separation = 4
alignment = 1

[node name="Range" type="Button" parent="Upgrade/Upgrade/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(20, 2)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_sdkiy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jiwmn")
theme_override_styles/normal = SubResource("StyleBoxFlat_t873f")

[node name="Label" type="Label" parent="Upgrade/Upgrade/HBoxContainer/Range"]
texture_filter = 1
layout_mode = 0
offset_left = -0.153847
offset_top = 17.2308
offset_right = 63.8462
offset_bottom = 40.2308
scale = Vector2(0.3, 0.3)
text = "50
"
horizontal_alignment = 1

[node name="AttackSpeed" type="Button" parent="Upgrade/Upgrade/HBoxContainer"]
custom_minimum_size = Vector2(20, 2)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_sdkiy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jiwmn")
theme_override_styles/normal = SubResource("StyleBoxFlat_t873f")

[node name="Label" type="Label" parent="Upgrade/Upgrade/HBoxContainer/AttackSpeed"]
texture_filter = 1
offset_left = -0.153847
offset_top = 17.2308
offset_right = 63.8462
offset_bottom = 40.2308
scale = Vector2(0.3, 0.3)
text = "50
"
horizontal_alignment = 1

[node name="Power" type="Button" parent="Upgrade/Upgrade/HBoxContainer"]
custom_minimum_size = Vector2(20, 2)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_sdkiy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jiwmn")
theme_override_styles/normal = SubResource("StyleBoxFlat_t873f")

[node name="Label" type="Label" parent="Upgrade/Upgrade/HBoxContainer/Power"]
texture_filter = 1
offset_left = -0.153847
offset_top = 17.2308
offset_right = 63.8462
offset_bottom = 40.2308
scale = Vector2(0.3, 0.3)
text = "50
"
horizontal_alignment = 1

[node name="Sell" type="Button" parent="Upgrade/Upgrade/HBoxContainer"]
custom_minimum_size = Vector2(20, 2)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_sdkiy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jiwmn")
theme_override_styles/normal = SubResource("StyleBoxFlat_t873f")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="body_shape_entered" from="Tower" to="." method="_on_tower_body_shape_entered_tower2"]
[connection signal="body_shape_exited" from="Tower" to="." method="_on_tower_body_shape_exited_tower2"]
[connection signal="timeout" from="Cadencia" to="." method="_on_cadencia_timeout"]
